Spring4D/Marshmallow sample

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,89 @@ Samples/__history/Unit1.pas.~9~
 __history/Yeahbah.FastReportObjects.pas.~1~
 Samples/Project1.dproj.local
 Samples/Project1.res
+Samples/Win32/Debug/MyDatabase.dcu
+Samples/Win32/Debug/SQLite3.dcu
+Samples/Win32/Debug/SQLiteTable3.dcu
+Samples/Win32/Debug/Spring.Collections.Adapters.dcu
+Samples/Win32/Debug/Spring.Collections.Base.dcu
+Samples/Win32/Debug/Spring.Collections.Dictionaries.dcu
+Samples/Win32/Debug/Spring.Collections.Events.dcu
+Samples/Win32/Debug/Spring.Collections.Extensions.dcu
+Samples/Win32/Debug/Spring.Collections.LinkedLists.dcu
+Samples/Win32/Debug/Spring.Collections.Lists.dcu
+Samples/Win32/Debug/Spring.Collections.MultiMaps.dcu
+Samples/Win32/Debug/Spring.Collections.Queues.dcu
+Samples/Win32/Debug/Spring.Collections.Sets.dcu
+Samples/Win32/Debug/Spring.Collections.Stacks.dcu
+Samples/Win32/Debug/Spring.Collections.dcu
+Samples/Win32/Debug/Spring.DesignPatterns.dcu
+Samples/Win32/Debug/Spring.Events.Base.dcu
+Samples/Win32/Debug/Spring.Events.dcu
+Samples/Win32/Debug/Spring.Persistence.Adapters.SQLite.dcu
+Samples/Win32/Debug/Spring.Persistence.Core.AbstractSession.dcu
+Samples/Win32/Debug/Spring.Persistence.Core.Base.dcu
+Samples/Win32/Debug/Spring.Persistence.Core.ConnectionFactory.dcu
+Samples/Win32/Debug/Spring.Persistence.Core.Consts.dcu
+Samples/Win32/Debug/Spring.Persistence.Core.EmbeddedEntity.dcu
+Samples/Win32/Debug/Spring.Persistence.Core.EntityCache.dcu
+Samples/Win32/Debug/Spring.Persistence.Core.EntityMap.dcu
+Samples/Win32/Debug/Spring.Persistence.Core.EntityWrapper.dcu
+Samples/Win32/Debug/Spring.Persistence.Core.Exceptions.dcu
+Samples/Win32/Debug/Spring.Persistence.Core.Graphics.dcu
+Samples/Win32/Debug/Spring.Persistence.Core.Interfaces.dcu
+Samples/Win32/Debug/Spring.Persistence.Core.ListSession.dcu
+Samples/Win32/Debug/Spring.Persistence.Core.Reflection.dcu
+Samples/Win32/Debug/Spring.Persistence.Core.Relation.Abstract.dcu
+Samples/Win32/Debug/Spring.Persistence.Core.Relation.ManyToOne.dcu
+Samples/Win32/Debug/Spring.Persistence.Core.Session.dcu
+Samples/Win32/Debug/Spring.Persistence.Core.Utils.dcu
+Samples/Win32/Debug/Spring.Persistence.Criteria.Abstract.dcu
+Samples/Win32/Debug/Spring.Persistence.Criteria.Interfaces.dcu
+Samples/Win32/Debug/Spring.Persistence.Criteria.dcu
+Samples/Win32/Debug/Spring.Persistence.Mapping.Attributes.dcu
+Samples/Win32/Debug/Spring.Persistence.Mapping.RttiExplorer.dcu
+Samples/Win32/Debug/Spring.Persistence.SQL.Commands.Abstract.dcu
+Samples/Win32/Debug/Spring.Persistence.SQL.Commands.Delete.dcu
+Samples/Win32/Debug/Spring.Persistence.SQL.Commands.Insert.dcu
+Samples/Win32/Debug/Spring.Persistence.SQL.Commands.Page.dcu
+Samples/Win32/Debug/Spring.Persistence.SQL.Commands.Select.dcu
+Samples/Win32/Debug/Spring.Persistence.SQL.Commands.Update.dcu
+Samples/Win32/Debug/Spring.Persistence.SQL.Commands.dcu
+Samples/Win32/Debug/Spring.Persistence.SQL.Generators.ASA.dcu
+Samples/Win32/Debug/Spring.Persistence.SQL.Generators.Abstract.dcu
+Samples/Win32/Debug/Spring.Persistence.SQL.Generators.Ansi.dcu
+Samples/Win32/Debug/Spring.Persistence.SQL.Generators.Firebird.dcu
+Samples/Win32/Debug/Spring.Persistence.SQL.Generators.MSSQL.dcu
+Samples/Win32/Debug/Spring.Persistence.SQL.Generators.MySQL.dcu
+Samples/Win32/Debug/Spring.Persistence.SQL.Generators.Oracle.dcu
+Samples/Win32/Debug/Spring.Persistence.SQL.Generators.PostgreSQL.dcu
+Samples/Win32/Debug/Spring.Persistence.SQL.Generators.Register.dcu
+Samples/Win32/Debug/Spring.Persistence.SQL.Generators.SQLite3.dcu
+Samples/Win32/Debug/Spring.Persistence.SQL.Interfaces.dcu
+Samples/Win32/Debug/Spring.Persistence.SQL.Params.dcu
+Samples/Win32/Debug/Spring.Persistence.SQL.Register.dcu
+Samples/Win32/Debug/Spring.Persistence.SQL.Types.dcu
+Samples/Win32/Debug/Spring.Reflection.Core.dcu
+Samples/Win32/Debug/Spring.Reflection.dcu
+Samples/Win32/Debug/Spring.ResourceStrings.dcu
+Samples/Win32/Debug/Spring.SystemUtils.dcu
+Samples/Win32/Debug/Spring.dcu
+Samples/Win32/Debug/Spring4DMarshmallowSample.exe
+Samples/Win32/Debug/StockModel.dcu
+Samples/Win32/Debug/Unit2.dcu
+Samples/Win32/Debug/Unit3.dcu
+Samples/Win32/Debug/psestocks.s3db
+Samples/Win32/Debug/sqlite3.dll
+Samples/__history/MyDatabase.pas.~1~
+Samples/__history/Spring4DMarshmallowSample.dpr.~1~
+Samples/__history/Spring4DMarshmallowSample.dpr.~2~
+Samples/__history/StockModel.pas.~1~
+Samples/__history/Unit2.dfm.~1~
+Samples/__history/Unit2.dfm.~2~
+Samples/__history/Unit2.dfm.~3~
+Samples/__history/Unit2.pas.~1~
+Samples/__history/Unit2.pas.~2~
+Samples/__history/Unit2.pas.~3~
+Samples/__history/Unit2.pas.~4~
+Samples/__history/Unit2.pas.~5~
+Samples/__history/Unit2.pas.~6~
