--- a/.gitignore
+++ b/.gitignore
@@ -113,3 +113,5 @@ Samples/__history/Unit2.pas.~3~
 Samples/__history/Unit2.pas.~4~
 Samples/__history/Unit2.pas.~5~
 Samples/__history/Unit2.pas.~6~
+Samples/Project1.identcache
+Samples/Spring4DMarshmallowSample.identcache
